--- a/_posts/2022-11-19-VAE.md
+++ b/_posts/2022-11-19-VAE.md
@@ -96,10 +96,14 @@ $$q_i^*(z) = \frac{p_\theta(X_i|z)p_Z(z)}{p_\theta(X_i)} = p_\theta(z|X_i)
 $$
 일 때 최대가 될 것이다. 그런데 베이즈 정리에 의해서, 이는 $p_\theta(z|X_i)$와 같다. 물론 이는 정확하게 계산이 불가능하며($p_\theta(X_i)$를 모르니), KL-Divergence 를 통해 $q_i^*$와 최대한 비슷한 $q_i$를 찾아야 한다.
 
-$$D_{KL}(q_i(\cdot) || q_i^*(\cdot)) = D_{KL}(q_i(\cdot) || p_\theta(\cdot|X_i)) = \mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(Z|X_i)} \right)\\
-=\mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(X_i|Z)p_Z(Z)/p_\theta(X_i)} \right)\\
-=\mathbb{E}_{Z\sim q_i} \left[\log(q_i(Z)) - \log(p_\theta(X_i|Z))-\log p_Z(Z) \right]+ \log p_\theta(X_i)
-$$
+\begin{align*}
+D_{KL}(q_i(\cdot) || q_i^*(\cdot)) \\
+&= D_{KL}(q_i(\cdot) || p_\theta(\cdot|X_i)) \\
+&= \mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(Z|X_i)} \right)\\
+&=\mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(X_i|Z)p_Z(Z)/p_\theta(X_i)} \right)\\
+&=\mathbb{E}_{Z\sim q_i} \left[\log(q_i(Z)) - \log(p_\theta(X_i|Z))-\log p_Z(Z) \right]+ \log p_\theta(X_i)
+\end{align*}
+
 
 마지막 줄에서, $\log p_\theta(X_i)$는 $Z$와 무관한 항이므로 최소화할 때 무시해줘도 된다. 그러면 $q_i(Z)$, $p_\theta(X_i|Z)$, $p_Z(Z)$는 모두 우리가 계산할 수 있는 항들이므로 $q_i$를 잘 조절함으로써 최소화가 가능하다. 
 
