--- a/_posts/2022-11-19-VAE.md
+++ b/_posts/2022-11-19-VAE.md
@@ -91,18 +91,26 @@ $$
 를 \\(Z_i\sim q_i(z)\\)를 사용한 importance sampling을 통해 근사해 보자. 
  $$\mathbb{E}_{Z \sim p_Z} [p_\theta(X_i|Z)] \approx p_\theta(X_i|Z_i)\frac{p_Z(Z_i)}{q_i(Z_i)}\quad \quad Z_i \sim q_i(z)
 $$
-이때 $q_i$는 앞서 설명한 것과 마찬가지로
+이때 \\(q_i\\)는 앞서 설명한 것과 마찬가지로
 $$q_i^*(z) = \frac{p_\theta(X_i|z)p_Z(z)}{p_\theta(X_i)} = p_\theta(z|X_i)
 $$
 일 때 최대가 될 것이다. 그런데 베이즈 정리에 의해서, 이는 $p_\theta(z|X_i)$와 같다. 물론 이는 정확하게 계산이 불가능하며($p_\theta(X_i)$를 모르니), KL-Divergence 를 통해 $q_i^*$와 최대한 비슷한 $q_i$를 찾아야 한다.
 
-\begin{aligned}
-D_{KL}(q_i(\cdot) || q_i^*(\cdot)) \\\\\\
-&= D_{KL}(q_i(\cdot) || p_\theta(\cdot|X_i)) \\\\\\
-&= \mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(Z|X_i)} \right)\\\\\\
-&=\mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(X_i|Z)p_Z(Z)/p_\theta(X_i)} \right)\\\\\\
-&=\mathbb{E}_{Z\sim q_i} \left[\log(q_i(Z)) - \log(p_\theta(X_i|Z))-\log p_Z(Z) \right]+ \log p_\theta(X_i)
-\end{aligned}
+$$
+D_{KL}(q_i(\cdot) || q_i^*(\cdot)) 
+$$
+$$
+= D_{KL}(q_i(\cdot) || p_\theta(\cdot|X_i)) 
+$$
+$$
+= \mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(Z|X_i)} \right)
+$$
+$$
+=\mathbb{E}_{Z\sim q_i}\log\left(\frac{q_i(Z)}{p_\theta(X_i|Z)p_Z(Z)/p_\theta(X_i)} \right)
+$$
+$$
+=\mathbb{E}_{Z\sim q_i} \left[\log(q_i(Z)) - \log(p_\theta(X_i|Z))-\log p_Z(Z) \right]+ \log p_\theta(X_i)
+$$
 
 
 마지막 줄에서, $\log p_\theta(X_i)$ 는 $Z$ 와 무관한 항이므로 최소화할 때 무시해줘도 된다. 그러면 $q_i(Z)$, $p_\theta(X_i|Z)$, $p_Z(Z)$는 모두 우리가 계산할 수 있는 항들이므로 $q_i$를 잘 조절함으로써 최소화가 가능하다. 
