--- a/_posts/2022-11-19-VAE.md
+++ b/_posts/2022-11-19-VAE.md
@@ -3,7 +3,7 @@ layout: post
 title: Variational Autoencoder
 date: 2022-11-19 00:00:00 +0900
 description: Variational Autoencoder의 수학적 기반
-categories: Deep-Learning 
+categories: Deep-Learning math
 giscus_comments: true
 ---
 
