--- a/_posts/2022-07-20-QSM.md
+++ b/_posts/2022-07-20-QSM.md
@@ -23,7 +23,7 @@ giscus_comments: true
 - Training에 대한 설명
     - **COSMOS QSM maps**를 사용해 training (Gold standard)
     - five subject로부터 five head orientation → model-based data augmentation → **patch-wise network training**
-    - 7 datasets $\times$ 5 head orientation = 35 images로 validataion(1 dataset) + test(6 datasets)
+    - 7 datasets $$\times$$ 5 head orientation = 35 images로 validataion(1 dataset) + test(6 datasets)
 - Performance에 대한 설명
     - TKD, MEDI를 사용한 map들과의 비교 → 더 superior한 성능, COSMOS와 비교해서는 비슷한 성능
     - multiple head orientation에서 TKD, MEDI보다 더 consistent한 성능을 보임
@@ -70,7 +70,7 @@ giscus_comments: true
         </p>
     - **Augmentation**: **COSMOS QSM map**들을 B0 field에 대해 -30도 ~ 30도 **회전시킨 후 dipole convolution**해서 새로운 local field 데이터를 만들어 줌!
         - COSMOS를 우리는 ground truth로 생각하므로, 여기에 dipole convolution하면 새로운 local field data로 생각할 수 있음
-    - $64 \times 64 \times 64$ voxel로 이루어진 3D patch를 넣어 training. 이때 이웃한 patch끼리 약 66% overlap. 총 16800개의 patch
+    - $$64 \times 64 \times 64$$ voxel로 이루어진 3D patch를 넣어 training. 이때 이웃한 patch끼리 약 66% overlap. 총 16800개의 patch
     - U-net을 base structure로 사용. input과 output이 비슷한 structural contrast를 공유하기 때문에, **U-net의 feature concatenation이 도움**이 됨.
         - 2D 대신 3D로 바꿈
         - 19 conv layer, 18 BatchNorm, 18 ReLU, 4 max-pooling, 4 transposed conv (deconv), 4 feature concat
@@ -82,15 +82,15 @@ giscus_comments: true
     - Loss function: **3가지를 디자인**해 사용.
         - 각각 **physical model consistency**(Model loss), **voxel-wise differnece**(L1 loss), **image edge preservation** (Gradient loss)를 고려하기 위한 loss
             
-            $\mathrm{loss}_{\mathrm{Model}} = ||d * \chi - d * y||_1$, $d$: dipole kernel / $\chi, y$: 각각 output과 label
+            $$\mathrm{loss}_{\mathrm{Model}} = ||d * \chi - d * y||_1$$, $$d$$: dipole kernel / $$\chi, y$$: 각각 output과 label
             
-            $\mathrm{loss_{L1}}=||\chi-y||_1$
+            $$\mathrm{loss_{L1}}=||\chi-y||_1$$
             
-            $\mathrm{loss_{Gradient}}=\sum_{i=x, y, z}||\nabla \chi|_i-|\nabla y|_i|$
+            $$\mathrm{loss_{Gradient}}=\sum_{i=x, y, z}||\nabla \chi|_i-|\nabla y|_i|$$
             
         - 위 세 loss의 lin. combination으로 total sum.
 - Evaluation of QSM Algorithms
-    - QSM map에 따른 퀄리티를 평가하기 위해서, 6명$\times$5 orientations = 30 scans를 3가지 recon method로 processing.
+    - QSM map에 따른 퀄리티를 평가하기 위해서, 6명$$\times$$5 orientations = 30 scans를 3가지 recon method로 processing.
     - metric: **pSNR**(peak SNR), **NRMSE**(normalized RMSE), **HFEN**(high-frequency error norm), **SSIM**(structural similarity index). COSMOS QSM map과 비교하는 데 사용
     - t-test로 유의미한 차이가 있는지도 검정
     - 여러 head orientation에 대해서 QSM map의 consistency와 accuracy를 측정하기 위해서는 ***region of interest analysis*** 사용
@@ -132,7 +132,7 @@ giscus_comments: true
 - 결과의 의의와 한계
     - QSMnet을 제안하였고, 높은 성능을 보임. abnormality에 대한 적용도 가능할 것으로 생각되지만, 3명의 환자에 대해서만 테스트했기 때문에 결과의 응용에 한계가 있음
     - NN은 표현력이 높지만, characterization이 어려움(not interpretable) → QSMnet의 결과는 주의해서 interpret해야 함.
-    - 본 논문의 QSMnet에서는 dipole deconvolution function을 enforce하는 $\mathrm{loss_{Model}}$ 텀이 사용됨.  → image-to-image transformation(L1 loss가 enforce)보다는 physical model을 학습하도록 enforce하였을 것으로 생각
+    - 본 논문의 QSMnet에서는 dipole deconvolution function을 enforce하는 $$\mathrm{loss_{Model}}$$ 텀이 사용됨.  → image-to-image transformation(L1 loss가 enforce)보다는 physical model을 학습하도록 enforce하였을 것으로 생각
         - 세 가지 loss의 linear combination들에 대해 실험했을 때 여기서 사용된 조합이 가장 좋은 성능을 보였음 → proposed loss의 validity를 보여줌
     - augmentation: physical model의 training을 도왔을 것으로 생각
     - 결과에 대한 guarantee는 없지만, training data에 없는 뇌출혈 등의 특징도 잘 잡아냄 → 잘 훈련
