QSM equations fixed

--- a/_posts/2022-07-20-QSM.md
+++ b/_posts/2022-07-20-QSM.md
@@ -82,11 +82,11 @@ giscus_comments: true
     - Loss function: **3가지를 디자인**해 사용.
         - 각각 **physical model consistency**(Model loss), **voxel-wise differnece**(L1 loss), **image edge preservation** (Gradient loss)를 고려하기 위한 loss
             
-            $$\mathrm{loss}_{\mathrm{Model}} = ||d * \chi - d * y||_1$$, $$d$$: dipole kernel / $$\chi, y$$: 각각 output과 label
+            $$\mathrm{loss}_{\mathrm{Model}} = \vert\vert d * \chi - d * y\vert\vert_1$$, $$\quad d$$: dipole kernel / $$\chi, y$$: 각각 output과 label
             
-            $$\mathrm{loss_{L1}}=||\chi-y||_1$$
+            $$\mathrm{loss_{L1}}=\vert\vert\chi-y\vert\vert_1$$
             
-            $$\mathrm{loss_{Gradient}}=\sum_{i=x, y, z}||\nabla \chi|_i-|\nabla y|_i|$$
+            $$\mathrm{loss_{Gradient}}=\sum_{i=x, y, z}\lvert \vert\vert\nabla \chi\vert\vert_i-\vert\vert\nabla y\vert\vert_i\rvert$$
             
         - 위 세 loss의 lin. combination으로 total sum.
 - Evaluation of QSM Algorithms
