--- a/_posts/2022-09-15-VT.md
+++ b/_posts/2022-09-15-VT.md
@@ -67,7 +67,10 @@ Self-attention을 naive하게 적용시 pixel 수의 제곱에 비례 → 비현
 ### **Method**
 
 최대한 original Transformer에 가깝도록 설계됨
-![](https://velog.velcdn.com/images/vantaa89/post/e14718e3-e979-4032-8d64-6aa607cd449b/image.png)
+<p align="center" style="color:gray">
+<img src="https://velog.velcdn.com/images/vantaa89/post/e14718e3-e979-4032-8d64-6aa607cd449b/image.png" width="80%" height="80%"/>
+Vision Transformer의 구조
+</p>
 
 **Vision Transformer (ViT)**
 
@@ -116,8 +119,11 @@ Dataset
 Model Variant
 
 - BERT에서 사용된 configuration에 기반해 설정. B / L / H
-    
-![](https://velog.velcdn.com/images/vantaa89/post/338f9892-c8bc-4b11-bc4b-28ff3c4682e9/image.png)
+
+<p align="center" style="color:gray">
+<img src="https://velog.velcdn.com/images/vantaa89/post/338f9892-c8bc-4b11-bc4b-28ff3c4682e9/image.png" width="80%" height="80%"/>
+각 variant의 configuration
+</p>
 
 - Baseline CNN으로는 ResNet을 사용하되, BatchNorm을 GroupNorm으로 대체, standardized convolution을 사용
     - transfer 성능을 높임 → ResNet (BiT)로 부름 (Big Transfer)
@@ -145,7 +151,10 @@ ViT-L/16 model을 JFT-300M dataset으로 사전학습시킨 것이 모든 태스
 
 - 더 큰 모델인 ViT-H/14는 (특히 더 어려운 dataset에서) 더 높은 성능
 
-![](https://velog.velcdn.com/images/vantaa89/post/561b0ba7-302f-41d1-8588-428c26fcafe1/image.png)
+<p align="center" style="color:gray">
+<img src="https://velog.velcdn.com/images/vantaa89/post/561b0ba7-302f-41d1-8588-428c26fcafe1/image.png" width="80%" height="80%"/>
+각 variant의 configuration
+</p>
 
 
 **Pre-training Data Requirements**
@@ -169,7 +178,10 @@ JFT-300M의 부분집합 (9M, 30M, 90M)으로 pretranining
 
 - model size에 따른 transfer performance의 비교. JFT-300M에서 훈련
     
-  ![](https://velog.velcdn.com/images/vantaa89/post/3abb718b-aa3b-4bf2-8e00-da38f5893daa/image.png)
+<p align="center" style="color:gray">
+<img src="https://velog.velcdn.com/images/vantaa89/post/3abb718b-aa3b-4bf2-8e00-da38f5893daa/image.png" width="80%" height="80%"/>
+</p>
+
 
     
 1. performance / training time trade-off에서, ViT가 ResNet보다 우위
@@ -185,7 +197,9 @@ ViT의 첫 번째 layer는 flattened patch를 low-dimensional space로 projectio
 
 - 그림은 learned embedding fiter의 시각화
 
-![](https://velog.velcdn.com/images/vantaa89/post/8171b0ec-81ef-40cf-8b4f-ae3fc56ebf59/image.png)
+<p align="center" style="color:gray">
+<img src="https://velog.velcdn.com/images/vantaa89/post/8171b0ec-81ef-40cf-8b4f-ae3fc56ebf59/image.png" width="80%" height="80%"/>
+</p>
 
 
 Projection 후에는 learned positional embedding이 patch representation에 더해지게 되는데, 이는 image 내 patch의 위치를 자동으로 학습
