--- a/_posts/2022-09-15-VT.md
+++ b/_posts/2022-09-15-VT.md
@@ -69,6 +69,7 @@ Self-attention을 naive하게 적용시 pixel 수의 제곱에 비례 → 비현
 최대한 original Transformer에 가깝도록 설계됨
 <p align="center" style="color:gray">
 <img src="https://velog.velcdn.com/images/vantaa89/post/e14718e3-e979-4032-8d64-6aa607cd449b/image.png" width="80%" height="80%"/>
+<br>
 Vision Transformer의 구조
 </p>
 
@@ -122,6 +123,7 @@ Model Variant
 
 <p align="center" style="color:gray">
 <img src="https://velog.velcdn.com/images/vantaa89/post/338f9892-c8bc-4b11-bc4b-28ff3c4682e9/image.png" width="80%" height="80%"/>
+<br>
 각 variant의 configuration
 </p>
 
@@ -153,7 +155,8 @@ ViT-L/16 model을 JFT-300M dataset으로 사전학습시킨 것이 모든 태스
 
 <p align="center" style="color:gray">
 <img src="https://velog.velcdn.com/images/vantaa89/post/561b0ba7-302f-41d1-8588-428c26fcafe1/image.png" width="80%" height="80%"/>
-각 variant의 configuration
+<br>
+SOTA와의 성능 비교
 </p>
 
 
@@ -180,6 +183,8 @@ JFT-300M의 부분집합 (9M, 30M, 90M)으로 pretranining
     
 <p align="center" style="color:gray">
 <img src="https://velog.velcdn.com/images/vantaa89/post/3abb718b-aa3b-4bf2-8e00-da38f5893daa/image.png" width="80%" height="80%"/>
+<br>
+모델의 size에 따른 성능 비교
 </p>
 
 
@@ -199,6 +204,8 @@ ViT의 첫 번째 layer는 flattened patch를 low-dimensional space로 projectio
 
 <p align="center" style="color:gray">
 <img src="https://velog.velcdn.com/images/vantaa89/post/8171b0ec-81ef-40cf-8b4f-ae3fc56ebf59/image.png" width="80%" height="80%"/>
+<br>
+learned embedding filter
 </p>
 
 
