--- a/_posts/2022-11-19-VAE.md
+++ b/_posts/2022-11-19-VAE.md
@@ -15,7 +15,11 @@ Variational Autoencoder에 대해 설명하기 전에,  그 전단계인 Autoenc
 
 여기서 디코더가 **표현 벡터만을 보고 원래의 이미지를 복원**해낸다는 점에 주목하자. 즉, 표현 벡터에는 원래 이미지의 중요한 정보들이 다 담겨있다는 것이다. 즉, 표현벡터는 원본 이미지에 담긴 특성(feature)들을 뽑아 저장해놓은 차원 축소의 역할을 한다고도 볼 수 있을 것이다. 실제로 VAE를 데이터의 차원을 축소하는 데 사용하는 경우가 많다.
 
-![](https://velog.velcdn.com/images/vantaa89/post/96968d8e-04c7-4fcd-8df2-41c413c5355c/image.png)
+<p align="center" style="color:gray">
+<img src="/assets/posts/2022-11-19-VAE/image.png" width="80%" height="80%"/>
+<br>
+VAE의 기본 구조. Autoencoder의 경우에도 같은 형태를 가진다.
+</p>
 
 Variational Autoencoder는 Autoencoder에 확률적인 개념을 더해 개선한 것이다. 이 글에서는 VAE가 왜 타당한 모델인지, 그 motivation은 어디에서 나왔는지를 수학적으로 설명한 부분들을 정리해보려고 한다.
 
@@ -65,7 +69,7 @@ $$\mathbb{E}_{X\sim f}[\phi(X)]\approx \frac{1}{N}\sum_{i=1}^k \phi(X_i)$$
 
 과 같이 근사해서 사용한다. 이를 **Monte Carlo Estimation** 이라고 한다. 큰 수의 법칙에 의해, $$N$$이 커지면 커질수록 우변은 실제 기대값과 매우 유사한 값을 가지게 될 것이다. 
 
-하지만 위와 같은 근사는 때때로 분산이 너무 커서 실제로는 사용하기 힘들거나, $$N$$이 아주 커야 정확해질 때가 많다. 따라서 **Importance Sampling** 이라는 개념을 사용해서 분산을 줄이게 된다. Importance Sampling의 핵심은 X의 분포 함수 $f$를 다른 "좋은" 함수 \\(g\\)로 바꾸는 것이다. 이를 위해 아래와 같은 테크닉을 사용한다.
+하지만 위와 같은 근사는 때때로 분산이 너무 커서 실제로는 사용하기 힘들거나, $$N$$이 아주 커야 정확해질 때가 많다. 따라서 **Importance Sampling** 이라는 개념을 사용해서 분산을 줄이게 된다. Importance Sampling의 핵심은 X의 분포 함수 $$f$$를 다른 "좋은" 함수 \\(g\\)로 바꾸는 것이다. 이를 위해 아래와 같은 테크닉을 사용한다.
 
 $$\mathbb{E}_{X\sim f}[\phi(X)] = \int \phi(x) f(x) dx = \int \frac{\phi(x)f(x)}{g(x)} g(x) dx$$
 
@@ -169,4 +173,56 @@ $$= \text{maximize}_{\theta \in\Theta} \sum_{i=1}^N \mathbb{E}_{Z_\sim q_{\phi}(
 
 $$ \text{maximize}_{\theta \in\Theta, \phi \in \Phi} \sum_{i=1}^N \mathbb{E}_{Z_\sim q_{\phi}(z|X_i)} \left[\log p_\theta(X_i|Z)\right] - D_{KL}(q_\phi (\cdot|X_i)||p_Z(\cdot)) $$
 
-를 찾는 것이 VAE의 training objective가 된다. 트레이닝을 위해서는 위의 식을 \\(\theta\\)와 \\(\phi\\)에 대해 편미분하여 기울기를 구하고, 이를 통해 Stochastic Gradient Descent를 진행해야 하는데, 기댓값에 \\(\theta\\)와 \\(\phi\\)가 아랫첨자로 붙어있으니 기울기를 쉽게 구할수 없다. 여기에 대해서는 다음 포스팅에서 이어 설명하겠다.
+를 찾는 것이 VAE의 training objective가 된다.
+
+## Standard VAE setup
+이제 표준적인 setup의 VAE에서 일반적으로 사용하는
+
+$$p_Z = N(0, I),\quad q_\phi(z\vert x) = N(\mu_\phi(x), \Sigma_\phi(x)), \quad p_\theta(x\vert z) = N(f_\theta(x), \sigma^2 I)$$
+
+의 확률분포들을 대입해주자. 이때 $$\Sigma_\phi$$는 대각행렬으로 한다. 그러면, 
+
+다변수 정규분포의 확률밀도함수 
+
+$$ p_X(x) = \frac{1}{(2\pi)^{k/2}} e^{-\frac{1}{2}(x-\mu)^T\Sigma^{-1}(x-\mu)}$$
+
+에 의해서($$X \sim N(\mu, \Sigma)$$, $$X$$ 는 $$k$$ 차원), 
+위의 training objective는
+
+$$ \text{maximize}_{\theta \in\Theta, \phi \in \Phi} \sum_{i=1}^N \mathbb{E}_{Z_\sim q_{\phi}(z|X_i)} \left[-\frac{1}{2\sigma^2} \vert\vert X_i - f_\theta(Z)\vert\vert^2\right] - D_{KL}(q_\phi (\cdot|X_i)||N(0, I)) $$
+
+
+$$ = \text{minimize}_{\theta \in\Theta, \phi \in \Phi} \sum_{i=1}^N \mathbb{E}_{Z_\sim q_{\phi}(z|X_i)} \left[\frac{1}{2\sigma^2} \vert\vert X_i - f_\theta(Z)\vert\vert^2\right] + D_{KL}(q_\phi (\cdot|X_i)||N(0, I)) $$
+
+$$ = \text{minimize}_{\theta \in\Theta, \phi \in \Phi} \sum_{i=1}^N \mathbb{E}_{Z_\sim q_{\phi}(z|X_i)} \left[\frac{1}{2\sigma^2} \vert\vert X_i - f_\theta(Z)\vert\vert^2\right] + \frac{1}{2}\left\{\text{tr}(\Sigma_\phi(X_i))+  \vert\vert \mu_\phi(X_i) \vert\vert^2 - d- \log {\mathrm{det}\Sigma_\phi(X_i)}\right\}$$
+
+$$ = \text{minimize}_{\theta \in\Theta, \phi \in \Phi} \sum_{i=1}^N \mathbb{E}_{Z_\sim q_{\phi}(z|X_i)} \left[\frac{1}{\sigma^2} \vert\vert X_i - f_\theta(Z)\vert\vert^2\right] + \text{tr}(\Sigma_\phi(X_i))+  \vert\vert \mu_\phi(X_i) \vert\vert^2 - \log {\mathrm{det}\Sigma_\phi(X_i)}$$
+
+로 바뀌게 된다. 
+<br>
+트레이닝을 위해서는 위의 식을 \\(\theta\\)와 \\(\phi\\)에 대해 편미분하여 기울기를 구하고, 이를 통해 Stochastic Gradient Descent를 진행해야 하는데, 기댓값에 \\(\theta\\)와 \\(\phi\\)가 아랫첨자로 붙어있으니 기울기를 쉽게 구할수 없다. 
+위와 같이 기댓값의 기울기를 구해야 할 때 사용할 수 있는 방법으로는 **reparametrization trick**과 **log-derivative trick**(a.k.a. REINFORCE)이 있다. 여기서는 reparametrization trick을 사용해서 기울기를 구해본다.
+
+## Reparametrization Trick
+
+Reparametrization Trick에서는 $$Z_i\sim N(\mu_{\phi}(X_i), \Sigma_\phi(X_i))$$를 표준정규분포를 따르는 다른 확률변수 $$ \epsilon_i \sim N(0, 1)$$를 사용해 
+
+$$ Z_i = \mu_\phi (X_i) + \Sigma_{\phi}^{1/2}(X_i) \epsilon_i$$
+
+와 같이 매개화한다. 여기서 $$\Sigma_\phi$$ 는 대각행렬이며, 모든 성분이 0 이상이므로 각 성분에 제곱근을 취함으로써  $$\Sigma_\phi^{1/2}$$를 쉽게 구할 수 있다. 대입을 마치면 optimization objective는
+
+$$\text{minimize}_{\theta \in\Theta, \phi \in \Phi} \sum_{i=1}^N \mathbb{E}_{\epsilon \sim N(0, 1)} \left[\frac{1}{\sigma^2} \vert\vert X_i - f_\theta(\mu_\phi(X_i) + \Sigma_\phi^{1/2}(X_i)\epsilon )\vert\vert^2\right] + \text{tr}(\Sigma_\phi(X_i))+  \vert\vert \mu_\phi(X_i) \vert\vert^2 - \log {\mathrm{det}\Sigma_\phi(X_i)}$$
+
+로 바뀐다. 이제 기댓값이 $$\theta, \phi$$와는 무관한 식으로 바뀌었으므로 기댓값 안의 항을 미분하여 기울기를 쉽게 구하여 SGD를 시행할 수 있다. 
+
+한편, 위의 식을 보면 loss가 크게 
+
+$$\frac{1}{\sigma^2}\mathbb{E}_{\epsilon \sim N(0, 1)} \left[\vert\vert X_i -f_\theta(\mu_\phi(X_i) + \Sigma_\phi^{1/2}(X_i)\epsilon)\vert\vert^2\right]$$
+
+과 
+
+$$ 2D_{KL}(q_\phi(\cdot|X_i)\vert\vert p_z(\cdot)) = \text{tr}(\Sigma_\phi(X_i))+  \vert\vert \mu_\phi(X_i) \vert\vert^2 - \log {\mathrm{det}\Sigma_\phi(X_i)}$$
+
+로 나눠지는 것을 알 수 있다. 전자를 자세히 보면 원래의 입력 이미지 $$X_i$$와, encoder와 decoder를 거쳐서 나온 reconstruct된 이미지 $$f_\theta(\mu_\phi(X_i) + \Sigma_\phi^{1/2}(X_i)\epsilon)$$ 사이의 차이를 구하는 것이므로, **reconstruction term**라고 부를 수 있을 것이다. 후자의 경우 $$X_i$$를 latent space상으로 보내는 매핑이 일반적인 $$Z$$의 분포 $$N(0, I)$$과 너무 멀어지지 않도록 조절하는 역할을 하며, **regularization term**이라 명명될 수 있을 것이다. 
+
+식을 보면 decoder의 출력에 더해주는 noise의 크기를 결정하는 $$\sigma$$가 두 term 사이의 가중치를 조절하는 hyperparameter의 역할을 하는 것을 알 수 있다. 
