--- a/_posts/2022-07-20-QSM.md
+++ b/_posts/2022-07-20-QSM.md
@@ -3,7 +3,7 @@ layout: post
 title: QSMNet 논문 정리
 date: 2022-06-25 00:00:00 +0900
 description: "Quantitative susceptibility mapping using deep neural network: QSMnet"
-categories: deep-learning
+tags: deep-learning medical-imaging
 giscus_comments: true
 ---
 
