--- a/_posts/2022-11-19-VAE.md
+++ b/_posts/2022-11-19-VAE.md
@@ -3,7 +3,7 @@ layout: post
 title: Variational Autoencoder
 date: 2022-11-19 00:00:00 +0900
 description: Variational Autoencoder의 수학적 기반
-categories: deep-learning math
+tags: deep-learning math MathDNN
 giscus_comments: true
 ---
 
@@ -24,7 +24,7 @@ VAE의 기본 구조. Autoencoder의 경우에도 같은 형태를 가진다.
 Variational Autoencoder는 Autoencoder에 확률적인 개념을 더해 개선한 것이다. 이 글에서는 VAE가 왜 타당한 모델인지, 그 motivation은 어디에서 나왔는지를 수학적으로 설명한 부분들을 정리해보려고 한다.
 
 # Key Idea of VAE
-Variational Autoencoder는 크게 latent vector \\(Z\\) 가 주어졌을 때, 이미지의 확률분포를 나타내는 **인코더** $$p_\theta(x\vert z )$$ 와, 이미지 $$x$$ 가 주어졌을 때 latent vector \\(Z\\)의 분포를 설명하는 **디코더** $$q_\phi(z\vert x)$$ 의 두 부분으로 구성된다. Autoencoder를 이해했다면 왜 저 두 함수가 각각 인코더와 디코더로 불리는지 쉽게 이해할 수 있겠지만 우선은 '인코더, 디코더'라는 명칭에 대해서는 넘어가기로 하자. 여기에서는 왜 저 두 함수가 필요한지를 조금 다른 motivation을 사용해 설명할 것이다.
+Variational Autoencoder는 크게 latent vector \\(Z\\) 가 주어졌을 때, 이미지의 확률분포를 나타내는 **인코더** $$q_\phi(z\vert x)$$와, 이미지 $$x$$ 가 주어졌을 때 latent vector \\(Z\\)의 분포를 설명하는 **디코더** $$p_\theta(x\vert z )$$의 두 부분으로 구성된다. Autoencoder를 이해했다면 왜 저 두 함수가 각각 인코더와 디코더로 불리는지 쉽게 이해할 수 있겠지만 우선은 '인코더, 디코더'라는 명칭에 대해서는 넘어가기로 하자. 여기에서는 왜 저 두 함수가 필요한지를 조금 다른 motivation을 사용해 설명할 것이다.
 
 ## 목표: Maximum Likelihood Estimation
 
