--- a/_posts/2022-07-20-QSM.md
+++ b/_posts/2022-07-20-QSM.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: QSMNet 논문 정리
+title: QSMNet 논문 리뷰
 date: 2022-06-25 00:00:00 +0900
 description: "Quantitative susceptibility mapping using deep neural network: QSMnet"
-tags: deep-learning medical-imaging
+tags: deep-learning medical-imaging paper-review
 giscus_comments: true
 ---
 
