--- a/_posts/2022-09-15-VT.md
+++ b/_posts/2022-09-15-VT.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Vision Transformer 논문 정리
+title: Vision Transformer 논문 리뷰
 date: 2022-09-15 00:00:00 +0900
 description: "An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale"
 tag: deep-learning
