--- a/_posts/2022-12-20-NeRF.md
+++ b/_posts/2022-12-20-NeRF.md
@@ -72,7 +72,13 @@ $$\mathbf{r}(t) = \mathbf{o}+ t\mathbf{d} \quad\quad (t_n \le t \le t_f)$$
 
 $$ C(\mathbf{r}) = \int_{t_n}^{t_f}T(t) \sigma(\mathbf{r}(t))\mathbf{c}(\mathbf{r}(t), \mathbf{d})dt\quad\text{where}\quad T(t) = \text{exp}\left(-\int_{t_n}^t \sigma(\mathbf{r}(s))ds\right)$$
 
-로 계산할 수 있다. 여기서 $$T(t)$$는 accumulated transmittance라는 이름이 붙은 함수이다. 이는 광선이 $$t_n$$에서 $$t$$까지를 어떤 입자와 부딪쳐서 막혀 사라지지 않고 통과할 확률을 의미한다. 정의에 의해
+로 계산할 수 있다. 여기서 $$T(t)$$는 accumulated transmittance라는 이름이 붙은 함수이다. 이는 광선이 $$t_n$$에서 $$t$$까지를 어떤 입자와 부딪쳐서 막혀 사라지지 않고 통과할 확률을 의미한다. 적분 안의 항은
+
+* 그 위치의 입자들이 방사하는 빛의 세기 및 색깔을 나타내는 $$\mathbf{c}(\mathbf{r}(t), \mathbf{d})$$에
+* 해당 위치의 volume density $$ \sigma(\mathbf{r}(t))$$를 가중치 삼아 곱해준 후
+* 그 광선이 카메라가 있는 지점까지 막히지 않고 도달할 확률 $$ T(t)$$를 곱한 것
+
+으로 이해할 수 있다. 한편, $$T(t)$$의 경우 
 
 $$ \frac{1}{T}\frac{dT}{dt} = -\sigma(\mathbf{r}(t)) $$
 
@@ -95,6 +101,7 @@ $$ T_i = \text{exp}\left(-\sum_{j=1}^{i-1}\sigma_j\delta_j\right)\quad\quad \del
 * NeRF는 5D input $$(\mathbf{x}, \mathbf{d})$$를 받아서 색깔과 volume density를 내보낸다.
 * 이를 volume rendering 테크닉을 이용해 2D 사진으로 구성해낸다.
 * 구성해낸 사진과 ground truth의 차이를 구해, loss function으로 삼아 트레이닝시킨다.
+
 그런데 실제로는 이것만으로는 충분히 좋은 해상도의 사진을 얻을 수 없기 때문에 저자들은 두 가지 개선점을 도입하였다. 
 
 ## Positional Encoding
