--- a/_posts/2022-12-31-Rust1927.md
+++ b/_posts/2022-12-31-Rust1927.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "[Rust] 백준 1927: 최소 힙 풀이"
+title: "[Rust] 최소 힙 구현하기"
 date: 2022-12-31 01:00:00 +0900
-description: Rust로 최소 힙을 구현해보면서 기본 문법을 공부해봤다
+description: Rust로 최소 힙을 구현해보면서 기본 문법을 공부해보았다
 tags: data-structure rust
 giscus_comments: true
 ---
@@ -15,7 +15,7 @@ giscus_comments: true
 Rust
 </p>
 
-<a href="https://www.acmicpc.net/problem/1927"> 백준 1927번: 최소 힙</a>을 rust로 풀어보면서 rust의 입출력, 구조체(struct), 제너릭, 소유권 등을 알아봤다.
+<a href="https://www.acmicpc.net/problem/1927"> 백준 1927번: 최소 힙</a>을 rust로 풀어보면서 rust의 입출력, 구조체(struct), 제너릭, 소유권 등등 문법을 알아봤다.
 
 # 입출력
 Rust에서 출력은 기본적으로 `println!()`을 사용해서 할 수 있다. 다만 이 문제에서는 최악의 경우 10만 줄에 달하는 출력을 해야 하기 때문에 더 빠른 방법을 사용해야 시간초과가 나지 않는다.
@@ -98,7 +98,7 @@ let mut min_heap = MinHeap::<usize>::new();
 ```
 처럼 정의해주면 된다. 왜 `MinHeap<usize>`가 아니라 `MinHeap::<usize>`인지는 잘 모르겠다 (ㅎㅎ,,)
 
-## Gneric의 bound
+## Generic의 bound
 그런데 힙을 만드려면 아무 자료형 T나 들어와서는 안된다. 힙의 원소가 가지는 자료형은
 * 순서가 있어야 한다. 가장 작은 원소가 루트로 와야 하는데, `T`의 두 객체사이에 크고 작음이 정의되지 않다면 힙에 들어갈 수가 없다.
 * Copy를 할 수 있어야 한다.(Copy Trait) 힙에서 원소를 pop할 때, root에 있는 원소의 값을 복사해서 리턴해야 하기 때문이다.
@@ -226,7 +226,7 @@ fn main() {
 }
 ```
 
-# 참고문헌 \& 도움될 만한 사이트
+# 참고문헌 & 도움될 만한 사이트
 <a href="https://doc.rust-lang.org/rust-by-example/index.html"> Rust 공식 사이트의 "Rust by Examples" </a><br>
 <a href="https://velog.io/@unhappydogchew/러스트-입출력-방법-총정리-Rust로-알고리즘-풀기"> Velog: 러스트 입출력 방법 총정리 - Rust로 알고리즘 풀기</a><br>
 <a href="https://rinthel.github.io/rust-lang-book-ko/ch03-02-data-types.html">Rust 공식 가이드북 (한글 번역)</a><br>
