--- a/_posts/2023-01-27-RL.md
+++ b/_posts/2023-01-27-RL.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "강화학습 정리"
+title: "[강화학습] 1. Markov Decision Process, Optimal Policy"
 date: 2023-01-14 01:00:00 +0900
-description: 강화학습의 수학적 기반
+description: 강화학습의 수학적 기반을 살펴본다
 tags: deep-learning reinforcement-learning
 giscus_comments: true
 ---
@@ -11,7 +11,7 @@ giscus_comments: true
 
 보통 머신러닝을 처음 배울 때 머신러닝의 종류는 세 가지가 있다고 배운다. 지도학습, 비지도학습, 그리고 강화학습이다. 그런데 많은 머신러닝/딥러닝 입문 수업에서 지도학습과 비지도학습은 어느 정도 다루지만 강화학습은 다루지 않는 경우도 많은 것 같다. 이 때문에 강화학습을 접할 기회가 많지 않은 것 같아 이 포스팅에서 강화학습을 한번 살펴보겠다. 먼저 강화학습의 정의를 살펴보자.
 
-> *Reinforcement Learning(강화학습)*: 어떤 환경 안에서 정의된 에이전트가 현재의 상태를 인식하여, 선택 가능한 행동들 중 보상을 최대화하는 행동 혹은 행동 순서를 선택하는 방법 (위키백과)
+> **Reinforcement Learning(강화학습)**: 어떤 환경 안에서 정의된 에이전트가 현재의 상태를 인식하여, 선택 가능한 행동들 중 보상을 최대화하는 행동 혹은 행동 순서를 선택하는 방법 (위키백과)
 
 간단한 예제로 한번 살펴보자면, Pong(탁구) 게임을 플레이하는 에이전트를 생각해볼 수 있을 것이다. 
 
@@ -30,7 +30,7 @@ Pong
 
 지도학습의 경우 offline에 input과 output이 주어지는 데 비해서, 비지도학습의 경우에는 output이 주어지지 않고 input의 구조를 파악하는 데에 집중한다. 반면 강화학습은 현재의 상태를 보고 어떤 행동을 해야할지 훈련하는 과정에서, 주변 환경과의 상호작용으로 시간이 지난 후 행동에 따른 보상이나 페널티가 어떻게 나왔는지를 기반으로 학습을 하게 된다. 이를 학습하여 에이전트는 어떤 행동을 해야 보상을 최대화할 수 있는지를 훈련받게 된다.
 
-필자는 "정보과학세미나"라는 과목에서 강화학습을 한번 배운 적이 있지만, 당시 시간을 많이 투자하지 못하기도 했고 Tensorflow같은 프레임워크에 익숙하지 않은 상태였기 때문에 내용을 완전히 이해했다고 말하기는 힘든 상태였던 것 같다. 당시 배웠던 내용을 복습하며, 다른 책이나 자료들을 참고해 이 글로 정리해본다.
+필자는 "정보과학세미나"라는 과목에서 강화학습을 한번 배운 적이 있지만, 당시 시간을 많이 투자하지 못하기도 했고 Tensorflow같은 프레임워크에 익숙하지 않은 채 수업을 들었었기 때문에 내용을 완전히 이해했다고 말하기는 힘든 상태였던 것 같다. 당시 배웠던 내용을 복습하며, 다른 책이나 자료들을 참고해 이 글로 정리해본다.
 
 # Markov Reward Process
 
@@ -69,7 +69,7 @@ A Markov reward process is a tuple $$(\mathcal{S}, \mathcal{P}, R, \gamma)$$ whe
 * $$R: \mathcal{S}\to \mathbb{R}$$: a reward function
 * $$\gamma$$: a discount factor
 
-여기에서 $$R$$은 현재의 state에 대한 보상이라고 생각할 수 있다. 어떤 state에 도달하기만 해도, $$R$$이라는 함수가 이에 대한 보상을 부여한다고 생각을 하자. 이것을 토대로 **State-Value Function**이라는 것을 정의한다. 이름에서 알 수 있듯이, 각 state에 대응하는 _가치(value)_를 부여하는 함수이다.
+여기에서 $$R$$은 현재의 state에 대한 보상이라고 생각할 수 있다. 어떤 state에 도달하기만 해도, $$R$$이라는 함수가 이에 대한 보상을 부여한다고 생각을 하자. 이것을 토대로 **State-Value Function**이라는 것을 정의한다. 이름에서 알 수 있듯이, 각 state에 대응하는 __가치(value)__를 부여하는 함수이다.
 
 > Given an MRP $$(\mathcal{S}, \mathcal{P}, R, \gamma)$$, its **state-value function** $$v: \mathcal{S} \to \mathbb{R} $$ is
 * $$v(s) = \mathbb{E}[\sum_{k=0}^\infty \gamma^k R(N_k(s))]$$ \\
@@ -125,7 +125,7 @@ A Markov decision process is a tuple $$(\mathcal{S}, \mathcal{A}, \mathcal{P}, R
 
 이제 주어진 MDP $$(\mathcal{S, A, P}, R, \gamma)$$ 에 대해 **Policy**(정책)라는 것을 정의한다.
 
-> **Policy**
+> **Policy**\\
 A policy of an MDP $$(\mathcal{S, A, P}, R, \gamma)$$ is a probability distribution over actions given states: $$\pi: \mathcal{S \times A} \to [0, 1]$$
 
 말이 어려워보이지만 간단히 말해서, 현재의 상태를 보고 에이전트가 어떤 액션을 취할지 결정하는 함수가 바로 policy이다. 이렇게 생각하면 policy(정책)이라는 이름이 잘 지어진 것이라고 느껴진다. 즉, 현재의 state에 따라서 어떤 action이 취해질지가 (확률적으로) 결정되고, 이렇게 결정된 action은 다시 현재의 state와 함께 다음의 state를 확률적으로 결정하는 데 사용된다.
@@ -134,7 +134,7 @@ MDP $$(\mathcal{S, A, P}, R, \gamma)$$와 Policy $$\pi$$가 주어져있다면 s
 
 $$ \mathcal{P}^\pi(s, s') = \sum_{a\in \mathcal{A}} \pi(s, a) \cdot \mathcal{P} (s, a, s')$$
 
-이다. 조금만 생각해보면 당연하게 이해할 수 있다. 또한, 
+이다. 조금 생각해보면 어렵지 않게 받아들여진다. 또한, 
 
 $$ \mathcal{R}^\pi(s) = \sum_{a\in \mathcal{A}} \pi(s, a) \cdot R(s, a) $$
 
@@ -145,20 +145,86 @@ $$ \mathcal{R}^\pi(s) = \sum_{a\in \mathcal{A}} \pi(s, a) \cdot R(s, a) $$
 한편, 아까 MRP를 정의하면서 각 state에 가치를 부여하는 state-value function이라는 것이 있었던 것을 기억할 것이다. 그런데 이제 MDP에서는 다음의 state는 현재의 state에만 의존해서 결정되는 것이 아니다. action을 어떻게 취할지에 따라서 다음의 state가 달라지고, 또 에이전트가 받게 될 보상이 달라지는 것이다. 따라서 MDP에서는 우리가 취해줄 action 하나하나에 가치를 매겨주는 함수가 필요하다. 이름은 **action-value function**이라고 하면 알맞을 것이다.
 
 > **Action-Value Function**\\
-The action-value function $$q^\pi: \mathcal{S\times A}\to \mathbb{R}$$ is given by
-* $$q^\pi(s, a) = R(s, a) + \gamma \sum_{s'\in \mathcal{S}}\left(\mathcal{P}(s, a, s') \cdot v^\pi (s'))\right)$$ where
-* State-value function $$v^\pi(s) = \mathbb{E}\left[
-    \sum_{k=0}^\infty \gamma^k R^\pi(N_k^\pi(s))
-\right]$$
+>The action-value function $$q^\pi: \mathcal{S\times A}\to \mathbb{R}$$ is given by
+>
+> $$q^\pi(s, a) = R(s, a) + \gamma \sum_{s'\in \mathcal{S}}\left(\mathcal{P}(s, a, s') \cdot v^\pi (s'))\right)$$ 
+>
+> where
+> state-value function $$v^\pi$$ is given by
+>
+> $$v^\pi(s) = \mathbb{E}\left[
+>    \sum_{k=0}^\infty \gamma^k R^\pi(N_k^\pi(s))
+> \right]$$
 
-식이 어려워보이지만, 의미를 생각하면 크게 어렵지 않다. policy $$\pi$$가 이미 주어져 있으니, state가 주어지면 어떤 action을 취해야 할지는 확률분포가 바로 결정된다. 이 확률분포를 따라서 예상되는 reward의 기댓값을 구하고, $$\gamma$$로 discount해준 것일 뿐이다. 
+식이 어려워보이지만, 의미를 생각하면 크게 어렵지 않다. policy $$\pi$$가 이미 주어져 있으니, state가 주어지면 어떤 action을 취해야 할지는 확률분포가 바로 결정된다. 이 확률분포를 따라서 예상되는 state transition의 sequence를 확률변수로 나타낸 것이 $$N_k^\pi(s)$$ 이다. 이것을 토대로 reward의 기댓값을 구하고, $$\gamma$$로 discount해준 것일 뿐이다. 
 
 이제 대부분의 강화학습 환경을 모델링할 수 있는 Markov decision process를 알게 되었고, 현재의 상태를 보고 어떤 액션을 취해야 할지를 policy 함수로 결정하면 된다는 것도 알게 되었다. 또, 이러한 policy가 주어졌을 때 각각의 상태와 액션을 어떻게 평가해야 할지 또한 state-value function, action-value function을 정의함으로써 해결하였다. 이제 강화학습의 궁극적 목표인 policy를 결정하는 것만 해내면 된다. 그렇다면 어떤 policy가 좋은 policy일까?
 
 # Optimizing Policy
+Optimal policy, 즉 가장 좋은 policy는 다름아닌 위에서 정의한 value function들(state-value function, action-value function)을 최적화하는 policy이다. 그렇다면 state-value function과 action-value function이 최적이라는 것이 무슨 의미인지부터 정의해야 할 것 이다.
 
+> **Optimal State-Value Function**\\
+The optimal state-value function $$v^*:\mathcal{S}\to \mathbb{R}$$ is defined by 
+* $$v^*(s) = \mathrm{max}\{v^\pi(s) \vert \text{policy }\pi \text{ of the MDP}\}$$ for each $$ s \in \mathcal{S}$$
 
+> **Optimal Action-Value Function**\\
+The optimal action-value function $$q^*:\mathcal{S\times A}\to \mathbb{R}$$ is defined by 
+* $$q^*(s, a) = \mathrm{max}\{q^\pi(s, a) \vert \text{policy }\pi \text{ of the MDP}\}$$ for each $$ s \in \mathcal{S}, a\in \mathcal{A}$$
+
+즉, optimal state-value function이라 함은 각 state의 state-value값을 최대화하는 policy를 적용하였을 때 가지는 값이라고 할 수 있으며, optimal action-value function 또한 마찬가지로 각 (state, action)의 action-value값을 최대화하는 policy를 적용하였을 때의 값이라고 보면 될 것이다.
+
+그런데, optimal state-value function의 정의가 각 state에 대한 것임에 유의하자. 다시 말해, 각 state에 대해서 state-value가 최대가 되는 policy를 선택한 것은 알겠는데, **한 state의 value를 최대화시키는 $$\pi$$가 다른 state의 value도 최대화시키는가**하는 문제가 남아있다. 이것이 만족되지 않으면 optimal policy라는 것은 잘 정의되었다고 말하기 어려울 것이다. 상태(state)가 바뀔 때마다 policy가 바뀌어야 한다면, 그것은 "전략"이라고 말하기가 어려울 것이기 때문이다.
+
+**따라서, 어떤 policy가 optimal이라고 하기 위해서는 다음이 만족되어야 한다.**
+
+>**Optimal Policy**\\
+A policy $$\pi^*$$ of an MDP $$(\mathcal{S, A, P}, R, \gamma)$$ is said to be optimal if
+* $$v^{\pi^*}(s) = v^*(s)$$ for all $$s \in \mathcal{S}$$
+
+즉 $$\pi^*$$라는 policy를 선택하면, 모든 state의 state-value값이 최대가 되는 것이다. 이런 $$\pi^*$$가 정말 존재하기는 할까? 놀랍게도 항상 존재한다는 것을 증명할 수 있다.
+
+> **Theorem**\\
+> For every MDP, 
+> * there exists an optimal policy
+> * every optimal policy $$\pi^*$$ achieves the optimal action-value function
+>   * i.e. $$q^{\pi^*}(s, a) = q^*(s, a) $$ for all $$s\in \mathcal{S}, a\in \mathcal{A}$$ 
+> * $$v^*(s) = \text{max}_{a\in \mathcal{A}} q^*(s, a)$$.
+
+풀어서 설명하자면, 모든 Markov decision process에는 optimal policy가 존재할 뿐만 아니라 이 policy를 적용하면 모든 action의 action-value function이 최대화된다. 게다가 이게 끝이 아니다.
+
+> **Theorem**\\
+> There exists a **deterministic** optimal policy for any MDP
+
+이러한 optimal policy중에서는 deterministic한 것만 고려해주어도 된다. 즉, 각 state에서 어떤 action을 취할지 결정하는 $$\pi^*$$는 확률분포가 아닌, 결정론적인 형태가 되어도 state-value들을 최대화시킨다는 것이다. 따라서 앞으로는 deterministic한, $$\pi: \mathcal{S}\to \mathcal{A}$$의 함수 형태로서의 policy만을 고려하겠다. 
+
+이제 만약 optimal action-value function $$q^*$$를 찾았다고 한다면 $$\pi^*$$는 쉽게 구할 수 있다. action-value function이 최대가 되게 하는 action을 선택해주기만 하면 그게 바로 최선의 전략이 되기 때문이다. 식으로 표현해주면 다음과 같다.
+
+$$\pi^*(s) = a \Leftrightarrow q^*(s, a) = \text{max}_{a'\in \mathcal{A}} q^*(s, a')$$ 
+
+## Bellman Optimality Equations
+
+그렇다면 이제 optimal action-value function $$q^*$$를 구하는 과정만이 남았다. 이를 위해 먼저 **Bellman Optimality Equation**이라는 방정식을 한번 살펴보자. Dynamic Programming을 개발하고 Bellman-Ford 알고리즘을 제안한 그 벨만이다.
+
+> **Bellman Optimality Equations**
+>
+> $$v^*(s) = \text{max}_{a\in \mathcal{A}} \left( R(s, a) + \gamma \sum_{s'\in \mathcal{S}}\mathcal{P}(s, a, s')\cdot v^*(s') \right)$$
+>
+> $$q^*(s, a)=R(s, a)+\gamma \sum_{s^{\prime} \in \mathcal{S}} \mathcal{P}\left(s, a, s^{\prime}\right) \cdot\left(\max _{a^{\prime} \in \mathcal{A}} q^*\left(s^{\prime}, a^{\prime}\right)\right)$$
+
+우선 위의 식은 아래의 식에 $$ v^*(s) = \max_{a\in \mathcal{A}} q^*(s, a)$$라는 조건을 적용해주면 바로 나오는 것을 알 수 있다. $$q^*$$에 대한 아래의 식만 살펴보자. 이 또한 $$ v^*(s) = \max_{a\in \mathcal{A}} q^*(s, a)$$이므로 
+
+$$ q^*(s, a) = R(s, a) + \gamma \sum_{s'\in \mathcal{S}} \mathcal{P}(s, a, s') \cdot v^*(s)$$
+
+과 동치이다. 이렇게 생각하면 어렵지 않게 받아들일 수 있는 식이 된다. (state, action)의 value는 그 reward에다가, 현재의 state에서 transition하는 다음 state의 state-value의 기댓값에 $$\gamma$$의 discount factor를 곱한 것이다.
+
+Bellman Optimality Equation은 좌변과 우변에 모두 각각 $$v^*$$와 $$q^*$$가 나온다. 따라서 closed-form으로 해를 정확하게 구하는 것은 불가능하며, iterative method들을 사용하여 해를 구할 수 있다. 이를 구하는 방법으로는 다음이 있다.
+
+* Dynamic Programming: policy iteration, value iteration
+* Monte-Carlo Learning
+* Temporal-difference control: SARSA, Q-learning
+
+각각에 대해서는 다음 포스팅에서 계속해서 살펴보겠다. 
 
 
 # 참고문헌
-Lecture 06: Reinforcement Learning, CS Semiar (Machine Learning in Practice), Korea Science Academy of KAIST
+Lecture 06: Reinforcement Learning, CS Semiar (Machine Learning in Practice) lecture slides, Korea Science Academy of KAIST
